--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         mkdir -p $HOME/.local/share/nvim/lazy/
         git clone https://github.com/nvim-treesitter/nvim-treesitter.git
         mv nvim-treesitter $HOME/.local/share/nvim/lazy/
-        nvim --headless --noplugin -u tests/minimal_init.lua -c "TSInstall! python rust haskell html" -c "quit"
+        nvim --headless --noplugin -u tests/minimal_init.lua -c "TSInstall! python rust haskell html javascript" -c "quit"
 
     - name: Run luacheck type check / linter
       run: |
