Get explicit parser installation into test suite
Now if you're running the test suite locally, it won't rely on you
having manually installed the parser. Now it checks and makes sure
they're all installed.

This also brings parity to local runs vs github CI runs - both ensure
the same parsers.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,12 +24,11 @@ jobs:
         git clone https://github.com/nvim-lua/plenary.nvim.git
         mv plenary.nvim $HOME/.local/share/nvim/lazy/
 
-    - name: Install nvim-treesitter and parsers
+    - name: Install nvim-treesitter
       run: |
         mkdir -p $HOME/.local/share/nvim/lazy/
         git clone https://github.com/nvim-treesitter/nvim-treesitter.git
         mv nvim-treesitter $HOME/.local/share/nvim/lazy/
-        nvim --headless --noplugin -u tests/minimal_init.lua -c "TSInstall! python rust haskell html javascript c_sharp" -c "quit"
 
     - name: Run luacheck type check / linter
       run: |
