--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,22 @@ on:
 
 jobs:
   test:
+    strategy:
+      matrix:
+        neovim_version: ['v0.8.3', 'v0.9.5', 'v0.10.2', 'stable', 'nightly']
+      fail-fast: false
 
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install Neovim
-      run: sudo snap install nvim --classic
+      uses: rhysd/action-setup-vim@v1
+      with:
+        neovim: true
+        version: ${{ matrix.neovim_version }}
 
     - name: Install Plenary
       run: |
