--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
+  luacheck:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Run luacheck type check / linter
+      run: |
+        sudo apt-get install lua-check -y --no-install-recommends
+        make check
+
+
   test:
     strategy:
       matrix:
@@ -36,11 +48,6 @@ jobs:
         mkdir -p $HOME/.local/share/nvim/lazy/
         git clone https://github.com/nvim-treesitter/nvim-treesitter.git
         mv nvim-treesitter $HOME/.local/share/nvim/lazy/
-
-    - name: Run luacheck type check / linter
-      run: |
-        sudo apt-get install lua-check -y --no-install-recommends
-        make check
 
     - name: Check for errant util calls
       run: make no-utils
